# problems

./: .gitignore  CMakeLists.txt  build.sh
generators/: CMakeLists.txt
generators/gen_binary_tree/: CMakeLists.txt  main.cpp
generators/gen_integer_list/: CMakeLists.txt  main.cpp
problems/: CMakeLists.txt
problems/find_anagrams/: CMakeLists.txt  main.cpp
problems/max_tree_depth/: CMakeLists.txt  main.cpp  test_config.py
problems/max_tree_depth/test/: test2.in
problems/min_tree_leaf_path/: CMakeLists.txt  test_config.py
problems/reverse_double_linked/: main.cpp
problems/reverse_single_linked/: main.cpp
problems/sum_arrays/: CMakeLists.txt  main.cpp
testing/: test.py  test_framework.py
